...
	
    //login to app
	@IBAction func loginAction(_ sender: AnyObject) {
		//If fields aren't entered, throw a warning
		if self.emailField.text == "" || self.passwordField.text == "" {
			let alertController = UIAlertController(title: "Fields Missing!", message: "To login please enter your username and password!", preferredStyle: .alert)
			let defaultAction = UIAlertAction(title: "Ok", style: .cancel, handler: nil)
			alertController.addAction(defaultAction)
			self.present(alertController, animated: true, completion: nil)
		} else {
			//Log into authentication system, sign in user
			FIRAuth.auth()?.signIn(withEmail: self.emailField.text!,
			                       password: self.passwordField.text!,
			                       completion: { (user, error) in
									if error == nil {
										self.performSegue(withIdentifier: "goToMain", sender: self)
									} else {
										//If error in login or incorrect info, throw error and error reason
										let alertController = UIAlertController(title: "Login Failed!", message: error?.localizedDescription, preferredStyle: .alert)
										let defaultAction = UIAlertAction(title: "Ok", style: .cancel, handler: nil)
										alertController.addAction(defaultAction)
										self.present(alertController, animated: true, completion: nil)
									}
									})
		}
...
